--- a/styles.css
+++ b/styles.css
@@ -160,12 +160,14 @@ h3 {
     word-break: break-all; /* Ensures long text fits */
     text-align: center;
     max-width: 100%; /* Keep inside the container */
+    cursor: pointer;
+    cursor: url('cursor.cur') 16 16, auto; /* 16x16 is the "hotspot" position for the cursor */
 }
 
 
 
 .ca-value:hover {
-    color: #ff4500; /* Change to orange when hovered */
+    color: red; /* Change to orange when hovered */
 }
 
 /* Mobile Responsiveness */
@@ -206,12 +208,7 @@ h3 {
     transform: scale(2.8) !important; /* Ensure hover scaling always applies */
 }
 
-
-
-
-
 /* GIF AKALI */
-
 
 .video-container, 
 .question_mark {
