--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     display: flex;
     justify-content: center; /* Centers text horizontally */
     align-items: center; /* Centers text vertically */
-    margin-right: 1100px;
+    margin-right: 1250px;
     width: 160px;
     height: 80px;
     text-align: center;
@@ -276,3 +276,72 @@ h3 {
     transition: opacity 0.8s ease-out, transform 0.8s ease-out;
     z-index: 200; /* Make sure it's above other elements */
 }
+
+/* FOOTER CAŁY */
+
+.footer-container {
+    /* padding: 2rem 0 4rem 0; */
+    position: relative;
+    width: 100%;
+    z-index: 10;
+    margin-top: auto;
+}
+
+.footer {
+    width: 100%;
+    height: 20vh;
+    background-color: red;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.guziki {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.guziki a {
+    flex: 1;
+    height: 100%;
+}
+
+.guziki a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Ensure the footer stays at the bottom */
+@media (max-width: 1024px) {
+    .footer {
+        height: 15vh;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+        height: 12vh;
+    }
+    .guziki {
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer {
+        height: 10vh;
+    }
+    .guziki {
+        flex-direction: row;
+    }
+}
+
+
