--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@
     margin: 0 auto;
   }
   
-  /* CONTRACT ADDRESS STYLING */
+  /* CONTRACT ADDRESSS STYLING */
   .contract-address {
     margin-top: 20px;
     padding-top: 10px;
